--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -22,6 +22,7 @@
   top: 150px;
   height: auto;
   width: 275px;
+  padding: 20px;
 }
 
 .profile-dropdown li {
@@ -35,7 +36,6 @@
 .nav-but {
   background-color: unset;
   border: unset;
-  height: 160px;
 }
 
 .session-buttons {
@@ -44,7 +44,7 @@
   border-radius: 10px;
   color: white;
   height: 25px;
-  margin: 5px;
-  margin-bottom: 20px;
+  margin: 10px 5px;
+  /* margin-bottom: 20px; */
   width: 100px;
 }
