--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -9,3 +9,42 @@ h1 {
     font-size: 60px;
     margin: unset;
 }
+
+h2 {
+    color: white;
+    font-size: 35px;
+    margin: 7px;
+}
+
+h3 {
+    color: white;
+    font-size: 24px;
+    margin: 5px;
+}
+
+input {
+    border: unset;
+    border-radius: 10px;
+    padding: 7px;
+    margin: 10px 6px;
+
+}
+
+#artist-label {
+    color: white;
+    margin-left: 10px;
+}
+
+form {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+#modal-content {
+    background-color: #222533;
+    border-radius: 10px;
+    height: auto;
+    padding: 20px;
+    width: 300px;
+}
