--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -26,7 +26,10 @@
 }
 
 .profile-dropdown li {
+  color: white;
+  font-size: 20px;
   list-style-type: none;
+  margin: 7px 5px;
 }
 
 .nav-buttons {
@@ -36,15 +39,4 @@
 .nav-but {
   background-color: unset;
   border: unset;
-}
-
-.session-buttons {
-  background-color: #3e3e3e;
-  border: unset;
-  border-radius: 10px;
-  color: white;
-  height: 25px;
-  margin: 10px 5px;
-  /* margin-bottom: 20px; */
-  width: 100px;
 }
