--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -3,6 +3,25 @@
     hex: #aa401d,
     rgb: 170, 64, 29 */
 
+body, #root {
+    font-family: 'Nunito';
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+}
+
+main {
+    position: relative;
+    top: 160px;
+    bottom: 0;
+    width: 100%;
+    height: 83%;
+    overflow: auto;
+}
 
 h1 {
     color: white;
@@ -27,7 +46,6 @@ input {
     border-radius: 10px;
     padding: 7px;
     margin: 10px 6px;
-
 }
 
 #artist-label {
