--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -7,6 +7,7 @@
   left: 0;
   right: 0;
   height: 160px;
+  z-index: 7;
 }
 
 .header {
@@ -18,7 +19,7 @@
   background-color: #aa401dc5;
   border-radius: 10px;
   position: absolute;
-  right: 5px;
+  right: 20px;
   top: 150px;
   height: auto;
   width: 275px;
