--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -60,6 +60,11 @@ form {
     flex-direction: column;
 }
 
+#modal {
+    position: fixed;
+    z-index: 2;
+}
+
 #modal-content {
     background-color: #222533;
     border-radius: 10px;
