--- a/react-app/src/components/ArtistPage/artist-page.css
+++ b/react-app/src/components/ArtistPage/artist-page.css
@@ -2,6 +2,30 @@
     width: 100%;
 }
 
+.artist-buttons {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    position: absolute;
+    top: 10px;
+    height: 125px;
+    width: 100%;
+}
+
+.social-buttons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 45px;
+}
+
+.social-buttons button {
+    background-color: unset;
+    border: unset;
+    margin: 0 5px;
+}
+
 .tour-container {
     display: grid;
     grid-template-rows: 100px 700px;
