--- a/react-app/src/components/ManagePage/manage-page.css
+++ b/react-app/src/components/ManagePage/manage-page.css
@@ -1,17 +1,51 @@
+li {
+    list-style-type: none;
+}
+
 .manage-layout {
     display: grid;
-    grid-template-columns: 33% 67%;
+    grid-template-columns: 27% 73%;
     margin: 30px;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
 
 .manage-menu {
-    margin: 30px;
+    border-right: 1px solid #aa401dc5;
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    margin: 70px;
+}
+
+.manage-menu li {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    height: 60px;
+    width: 200px;
+}
+
+.nav-link {
+    color: black;
+    padding: 10px;
+    text-decoration: unset;
+    margin: 10px;
+}
+
+.active {
+    color: #aa401dc5;
+    font-weight: 900;
 }
 
 .content-layout {
     display: flex;
     flex-direction: column;
-    width: 825px;
+    width: 1000px;
     margin: 30px;
 }
 
@@ -28,25 +62,45 @@
     margin: 5px;
     padding: 0 20px;
     height: 60px;
-    width: 800px;
+    width: 950px;
 }
 
 .tour-show {
     background-color: rgba(237, 232, 228, 0.193);
     border-radius: 10px;
-    display: flex;
+    display: grid;
+    grid-template-columns: 35% 25% 20% 10% 10%;
     position: relative;
-    justify-content: space-between;
-    align-items: center;
+    /* justify-content: space-between; */
+    /* align-items: center; */
     margin: 5px;
     margin-left: 55px;
     padding: 0 20px;
     height: 40px;
-    width: 750px;
+    width: 900px;
+}
+
+.tour-show p {
+    display: flex;
+    align-items: center;
+    margin: 6px;
+    padding: 2px;
 }
 
 .name-edit {
     display: flex;
+}
+
+.tour-buttons {
+    display: flex;
+}
+
+.add-button {
+    background-color: unset;
+    border: unset;
+    color: #aa401dc5;
+    font-size: 25px;
+    padding: 6px;
 }
 
 .edit-name-button {
@@ -67,7 +121,7 @@
 .delete-buttons {
     background-color: unset;
     border: unset;
-    color: red;
+    color: grey;
     font-size: 18px;
     padding: 10px;
     height: fit-content;
