--- a/react-app/src/components/ManagePage/manage-page.css
+++ b/react-app/src/components/ManagePage/manage-page.css
@@ -40,6 +40,7 @@ li {
 .active {
     color: #aa401dc5;
     font-weight: 900;
+    text-shadow: 0 0 20px;
 }
 
 .content-layout {
@@ -49,12 +50,19 @@ li {
     margin: 30px;
 }
 
-.content-layout button {
-    align-self: end;
+.back-image {
+    border-radius: 10px;
+    box-shadow: 0 0 20px 10px;
+}
+
+.content {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
 }
 
 .tour-tile {
-    background-color: rgba(237, 232, 228, 0.193);
+    background-color: rgba(103, 99, 96, 0.764);
     border-radius: 10px;
     display: flex;
     justify-content: space-between;
@@ -66,7 +74,7 @@ li {
 }
 
 .tour-show {
-    background-color: rgba(237, 232, 228, 0.193);
+    background-color: rgba(103, 99, 96, 0.764);
     border-radius: 10px;
     display: grid;
     grid-template-columns: 35% 25% 20% 10% 10%;
@@ -96,9 +104,11 @@ li {
 }
 
 .add-button {
+    align-self: flex-end;
     background-color: unset;
     border: unset;
-    color: #aa401dc5;
+    /* color: #aa401dc5; */
+    color: #16F596;
     font-size: 25px;
     padding: 6px;
 }
@@ -106,14 +116,14 @@ li {
 .edit-name-button {
     background-color: unset;
     border: unset;
-    position: relative;
-    top: -15px;
+    color: #16F596;
     font-size: 15px;
 }
 
 .edit-buttons {
     background-color: unset;
     border: unset;
+    color: #16F596;
     font-size: 18px;
     padding: 10px;
 }
@@ -121,7 +131,7 @@ li {
 .delete-buttons {
     background-color: unset;
     border: unset;
-    color: grey;
+    color: #F67D68;
     font-size: 18px;
     padding: 10px;
     height: fit-content;
