--- a/react-app/src/components/ManagePage/manage-page.css
+++ b/react-app/src/components/ManagePage/manage-page.css
@@ -99,6 +99,12 @@ li {
     display: flex;
 }
 
+.merch-edit {
+    display: flex;
+    justify-content: space-between;
+    width: 200px
+}
+
 .tour-buttons {
     display: flex;
 }
