--- a/react-app/src/components/ManagePage/manage-page.css
+++ b/react-app/src/components/ManagePage/manage-page.css
@@ -97,6 +97,7 @@ li {
 .tour-show p {
     display: flex;
     align-items: center;
+    justify-content: center;
     margin: 6px;
     padding: 2px;
 }
