--- a/react-app/src/components/Home/Home.css
+++ b/react-app/src/components/Home/Home.css
@@ -1,10 +1,25 @@
 .home-content-layout {
-    padding: 100px 200px
+    padding: 100px 100px
 }
 
 .home-content-container {
     display: grid;
-    grid-template-columns: 33% 34% 33%;
+}
+
+@media (max-width: 1440px) and (min-width: 1024px) {
+    .home-content-container {
+        grid-template-columns: 33% 34% 33%;
+    }
+}
+@media (min-width: 1441px) {
+    .home-content-container {
+        grid-template-columns: 25% 25% 25% 25%;
+    }
+}
+@media (min-width: 1920px) {
+    .home-content-container {
+        grid-template-columns: 20% 20% 20% 20% 20%;
+    }
 }
 
 .artist-tile-container {
