Style show tile for large screens and scrollbar

--- a/react-app/src/components/ArtistPage/artist-page.css
+++ b/react-app/src/components/ArtistPage/artist-page.css
@@ -118,4 +118,9 @@
     .shows-container {
         width: 80%;
     }
+    .info {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
 }
