--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -22,6 +22,8 @@ main {
     width: 100%;
     /* height: 79%; */
     overflow: auto;
+    scrollbar-width: thin;
+    scrollbar-color: rgba(0, 0, 0, 0.822) rgba(0, 0, 0, 0);
     z-index: 0;
 }
 
