--- a/react-app/src/components/ManagePage/manage-page.css
+++ b/react-app/src/components/ManagePage/manage-page.css
@@ -225,11 +225,21 @@ li {
     }
 
     .content {
-        width: fit-content;
+        width: 90%;
     }
 
-    .content-layout,
+    .manage-layout {
+        margin: 30px 0;
+    }
+
+    .content-layout {
+        margin: unset;
+    }
+
+    .content-layout {
+        width:  90%;
+    }
     .tour-tile {
-        width: 100%;
+        width: 85%;
     }
 }
