--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -1,12 +1,12 @@
 .navigation {
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0.712);
   display: flex;
   justify-content: space-between;
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
-  height: 115px;
+  height: 90px;
   z-index: 1;
 }
 
@@ -34,7 +34,7 @@
 }
 
 .nav-buttons {
-  height: 115px;
+  height: 90px;
 }
 
 .nav-but {
