--- a/react-app/src/components/Home/Home.css
+++ b/react-app/src/components/Home/Home.css
@@ -1,15 +1,22 @@
+.home-container {
+    display: flex;
+    justify-content: space-between;
+}
+
 .tiling-container {
-    padding: 100px;
+    padding-top: 100px;
     display: grid;
 }
 
 .artist-tile-container {
-    width: 100%;
+    /* width: 100%; */
     height: 400px;
+    padding: 0 20px;
+    box-sizing: border-box;
 }
 
 .artist-tile {
-    background-color: rgb(116, 116, 116);
+    /* background-color: rgb(116, 116, 116); */
     border-radius: 10px;
     max-height: 300px;
     margin: 0 auto;
@@ -27,6 +34,11 @@
     object-fit: cover;
     height: 300px;
     width: 250px;
+}
+
+.home-sidebar, .home-chat {
+    /* background-color: rgb(116, 116, 116); */
+    width: 17%;
 }
 
 @media (max-width: 1000px) {
@@ -48,5 +60,11 @@
 @media (min-width: 1920px) {
     .tiling-container {
         grid-template-columns: 20% 20% 20% 20% 20%;
+    }
+
+    .home-main-content {
+        display: flex;
+        flex-direction: column;
+        /* width: 100%; */
     }
 }
