--- a/react-app/src/components/ManagePage/manage-page.css
+++ b/react-app/src/components/ManagePage/manage-page.css
@@ -1,5 +1,15 @@
-li {
-    list-style-type: none;
+.border-right-red {
+    border-right: 1px solid #aa401dc5;
+}
+
+.border-right-blue {
+    border-right: 1px solid #1d7daac5;
+}
+
+.active-blue {
+    color: #1d7daac5;
+    font-weight: 900;
+    text-shadow: 0 0 20px;
 }
 
 .manage-layout {
@@ -11,38 +21,6 @@ li {
     bottom: 0;
     left: 0;
     right: 0;
-}
-
-.manage-menu {
-    border-right: 1px solid #aa401dc5;
-    display: flex;
-    flex-direction: column;
-    align-items: end;
-    height: 590px;
-    /* margin: 70px; */
-    position: fixed;
-}
-
-.manage-menu li {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 20px;
-    height: 60px;
-    width: 200px;
-}
-
-.nav-link {
-    color: black;
-    padding: 10px;
-    text-decoration: unset;
-    margin: 10px;
-}
-
-.active {
-    color: #aa401dc5;
-    font-weight: 900;
-    text-shadow: 0 0 20px;
 }
 
 .content-layout {
