--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -59,6 +59,10 @@ p {
     font-weight: 500;
 }
 
+li {
+    list-style-type: none;
+}
+
 input,
 select {
     border: unset;
@@ -67,15 +71,15 @@ select {
     margin: 10px 6px;
 }
 
-#artist-label {
-    color: white;
-    margin-left: 10px;
-}
-
 form {
     width: 100%;
     display: flex;
     flex-direction: column;
+}
+
+#artist-label {
+    color: white;
+    margin-left: 10px;
 }
 
 #modal {
@@ -91,6 +95,23 @@ form {
     width: 300px;
 }
 
+.menu {
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    height: 590px;
+    /* margin: 70px; */
+    position: fixed;
+}
+
+.menu li {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    height: 60px;
+    width: 200px;
+}
 
 .buttons {
     background-color: #3e3e3e;
@@ -102,3 +123,19 @@ form {
     /* margin-bottom: 20px; */
     width: 100px;
   }
+
+.black-text {
+    color: black;
+}
+
+.nav-link {
+    padding: 10px;
+    text-decoration: unset;
+    margin: 10px;
+}
+
+.active {
+    color: #aa401dc5;
+    font-weight: 900;
+    text-shadow: 0 0 20px;
+}
