--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -3,7 +3,7 @@
     rgb: 170, 64, 29 */
 
 body, #root {
-    background-color: #1e151898;
+    background-color: #121a1d;
     font-family: 'Nunito';
     position: fixed;
     top: 0;
