--- a/react-app/src/components/Home/Home.css
+++ b/react-app/src/components/Home/Home.css
@@ -1,3 +1,9 @@
+.centered {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .home-main-content {
     display: flex;
     flex-direction: column;
@@ -95,7 +101,7 @@
     border-radius: 15px;
     border: none;
     color: white;
-    font-size: small;
+    font-size: 12px;
     height: 30px;
     margin: 0 3px;
     padding: 0 10px;
@@ -105,6 +111,11 @@
     background-color: rgba(113, 113, 119, 0.76);
     height: 1px;
     margin: 8px 0;
+}
+
+.icon-style {
+    vertical-align: middle;
+    font-size: 17px;
 }
 
 .grey-text {
