--- a/react-app/src/components/ManagePage/manage-page.css
+++ b/react-app/src/components/ManagePage/manage-page.css
@@ -17,7 +17,7 @@
     grid-template-columns: 20% 80%;
     margin: 30px;
     position: absolute;
-    top: 0;
+    top: 90px;
     bottom: 0;
     left: 0;
     right: 0;
