--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -10,16 +10,20 @@ body, #root {
     bottom: 0;
     left: 0;
     right: 0;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
 }
 
 main {
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
     position: absolute;
-    top: 90px;
+    top: 0;
     bottom: 0;
-    width: 100%;
-    /* height: 79%; */
+    width: 100vw;
+    min-height: 100vh;
+    padding-top: 90px;
     overflow: auto;
     scrollbar-width: thin;
     scrollbar-color: rgba(0, 0, 0, 0.822) rgba(0, 0, 0, 0);
