--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -118,15 +118,14 @@ form {
 }
 
 .buttons {
-    background-color: #3e3e3e;
-    border: unset;
-    border-radius: 10px;
+    border-radius: 15px;
+    border: none;
     color: white;
-    height: 25px;
-    margin: 10px 5px;
-    /* margin-bottom: 20px; */
-    width: 100px;
-  }
+    font-size: 12px;
+    height: 30px;
+    margin: 0 3px;
+    padding: 0 10px;
+}
 
 .black-text {
     color: black;
