--- a/react-app/src/components/ManagePage/manage-page.css
+++ b/react-app/src/components/ManagePage/manage-page.css
@@ -1,8 +1,8 @@
-.border-right-red {
+.background-red {
     border-right: 1px solid #aa401dc5;
 }
 
-.border-right-blue {
+.background-blue {
     border-right: 1px solid #1d7daac5;
 }
 
