--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -23,7 +23,7 @@ main {
     bottom: 0;
     width: 100vw;
     min-height: 100vh;
-    padding-top: 90px;
+    padding-top: 56px;
     overflow: auto;
     scrollbar-width: thin;
     scrollbar-color: rgba(0, 0, 0, 0.822) rgba(0, 0, 0, 0);
@@ -55,7 +55,9 @@ h3 {
 }
 
 a {
+    color: white;
     text-decoration: none;
+    /* text-shadow: none; */
 }
 
 p {
@@ -102,19 +104,42 @@ form {
 .menu {
     display: flex;
     flex-direction: column;
-    align-items: end;
-    height: 590px;
-    /* margin: 70px; */
+    height: 100vh;
     position: fixed;
+    margin: 1px 0;
+    padding: 0;
 }
 
-.menu li {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 20px;
-    height: 60px;
-    width: 200px;
+.drop-menu-item {
+  display: flex;
+  align-items: center;
+  height: 41px;
+}
+
+.menu-icon-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 42px;
+}
+
+.menu-icon {
+  font-size: 22px;
+}
+
+.menu-text {
+  margin: 0 2px;
+}
+
+.menu-text p {
+  font-size: 14px;
+  margin: 0;
+}
+
+.menu-text p + p {
+  color: #7e868b;
+  font-size: 13px;
+  margin: 0;
 }
 
 .buttons {
@@ -127,8 +152,8 @@ form {
     padding: 0 10px;
 }
 
-.black-text {
-    color: black;
+.white-text {
+    color: white;
 }
 
 .nav-link {
