add thunk for getting all posts, added "feed" route and a Redirect component

--- a/react-app/src/components/Home/Home.css
+++ b/react-app/src/components/Home/Home.css
@@ -105,6 +105,13 @@
     font-size: 17px;
 }
 
+.profile-pic {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    margin-right: 10px;
+}
+
 .border {
     background-color: rgba(113, 113, 119, 0.76);
     height: 1px;
