Artist and user creation are now seperated.

--- a/react-app/src/components/Home/Home.css
+++ b/react-app/src/components/Home/Home.css
@@ -4,6 +4,10 @@
     justify-content: center;
 }
 
+.white-text {
+    color: white;
+}
+
 .home-main-content {
     display: flex;
     flex-direction: column;
