--- a/react-app/src/components/Footer/footer.css
+++ b/react-app/src/components/Footer/footer.css
@@ -5,23 +5,25 @@
 }
 
 .footer-container {
-    background-color: rgba(0, 0, 0, 0.23);
+    background-color: rgba(0, 0, 0, 0.9);
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     margin-top: auto;
+    font-size: 13px;
+    z-index: 3;
 }
 
 .contact-container {
-    min-width: 330px;
-    height: 40px;
+    min-width: 300px;
+    height: 35px;
     justify-content: space-between;
 }
 
 .footer-icon {
     color: white;
-    font-size: 20px;
+    font-size: 18px;
     padding: 5px;
     transition: 500ms;
 }
@@ -46,4 +48,12 @@
     left: 0;
     right: 0;
     height: 75px;
+}
+
+@media (min-width:768px) {
+    .footer-container {
+        flex-direction: row;
+        justify-content: space-around;
+        padding: 0 20px;
+    }
 }
