--- a/react-app/src/components/Home/Home.css
+++ b/react-app/src/components/Home/Home.css
@@ -18,22 +18,29 @@
 .tiling-container {
     display: grid;
     padding-top: 20px;
-    width: fit-content;
+    width: 100%;
 }
 
 .artist-tile-container {
-    /* width: 100%; */
-    height: 400px;
+    background-color: #0e1114;
+    flex-direction: column;
     padding: 0 20px;
+    margin: 20px 0;
     box-sizing: border-box;
+    transition-duration: 250ms;
+}
+
+.artist-tile-container:hover {
+    background-color: #181e22;
+    transition-duration: 250ms;
+    border-radius: 10px;
 }
 
 .artist-tile {
-    /* background-color: rgb(116, 116, 116); */
     border-radius: 10px;
-    max-height: 300px;
+    height: 300px;
+    width: 250px;
     margin: 0 auto;
-    max-width: 250px;
 }
 
 .name-artist {
@@ -45,8 +52,8 @@
 .artist-img {
     border-radius: 10px;
     object-fit: cover;
-    height: 300px;
-    width: 250px;
+    max-height: 300px;
+    max-width: 250px;
 }
 
 .home-sidebar, .home-chat {
@@ -163,6 +170,12 @@
     align-items: center;
     height: 400px;
     margin: 20px;
+}
+
+@media (max-width: 767px) {
+    .tiling-container {
+        grid-template-columns: 100%;
+    }
 }
 
 @media (max-width: 1023px) {
